# Poster

./: .gitignore  README.md
poster/: Cargo.toml  README.md  db.sqlite
poster/sql/: addUser.sql  deleteTables.sql  makeAccountsTable.sql  makeTables.sql  makeUsersTable.sql
poster/src/: main.rs  models.rs  sql.rs  utils.rs  views.rs  workingLogin.rs
poster/templates/: base.html  base_form.html  base_navbar.html  base_user.html  base_vote.html  create_post_page.html  index.html  index_page.html  login.html  login_page.html  post_page.html  signup.html  signup_page.html  welcome.html
