[package]
name = "poster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

# rusqlite = { version = "0.28.0", features = ["bundled"]}
sqlx = { version = "0.6.2", features = ["macros", "sqlite", "runtime-tokio-rustls"] }
futures-util = "0.3.27"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }